Added project page link and changed project description

--- a/projects.html
+++ b/projects.html
@@ -49,13 +49,11 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">CouchBuddies - Web App</h2>
                                             <p>
-                                                CouchBuddies helps friends organize movie nights by storing and sharing favorite movies with genre, platform, and synopsis. 
-                                                Features include thumbs up/down ratings, hover-to-expand details, and edit/delete controls for your own movies. 
-                                                AI-powered poster mockups are planned. Built with React for desktop and mobile.
+                                                CouchBuddies is a full-featured web app that makes organizing movie nights effortless for friends and movie enthusiasts. Users can add, manage, and share movies with detailed information including genre, streaming platform, and synopsis. The app features interactive thumbs up/down ratings, hover-to-expand movie details, and secure edit/delete controls for personal entries. Built with React, and a secure backend using Supabase for authentication and database management, CouchBuddies delivers a seamless experience across desktop, tablet, and mobile devices. This project demonstrates skills in front-end development, state management, user authentication, API integration, and responsive design.
                                             </p>
                                     
                                         <!-- Bootstrap Carousel -->
-                                            <a href="caseStudy.html" class="d-block text-center mt-4"></a>
+                                            <a href="caseStudy.html" class="d-block text-center mt-4">
                                                 <div id="couchbuddiesCarousel" class="carousel slide mt-4" data-bs-ride="carousel">
                                                     <div class="carousel-inner">
                                                         <div class="carousel-item active">
